@@ -36,6 +36,16 @@ module Gem::VersionOption
   end
 
   ##
+  # Add the --prerelease option to the option parser.
+
+  def add_prerelease_option(*wrap)
+    add_option("--[no-]prerelease",
+               "Allow prerelease versions of a gem", *wrap) do |value, options|
+      options[:prerelease] = value
+    end
+  end
+
+  ##
   # Add the --version option to the option parser.
 
   def add_version_option(task = command, *wrap)
