@@ -1,5 +1,9 @@
 # -*- coding: utf-8 -*-
 
+2010-02-08  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/commands/dependency_command.rb:  Support --prerelease.
+
 2010-02-07  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/dependency_installer.rb:  Allow prerelease gems to
